Refactoring Connection Pool