@@ -25,36 +25,44 @@ public class ConnectionPool {
 
     public synchronized Connection getConnection() throws InterruptedException {
         while (availableConnections.isEmpty()) {
-            System.out.println("All connections are busy. Waiting...");
+            System.out.println("No connection is available, please wait");
             wait();
         }
-        Connection connection = availableConnections.removeFirst();
+        Connection connection = availableConnections.remove(0); // исправлено для List
         usedConnections.add(connection);
-        System.out.println("Connection " + connection.getId() + " acquired.");
+        System.out.println("Connection's received " + connection.getId());
         return connection;
     }
 
     public synchronized void releaseConnection(Connection connection) {
-        usedConnections.remove(connection);
-        availableConnections.add(connection);
-        System.out.println("Connection " + connection.getId() + " released.");
-        notifyAll();
+        if (connection == null) {
+            return;
+        }
+        if (usedConnections.remove(connection)) {
+            availableConnections.add(connection);
+            System.out.println("Connection's avaliable " + connection.getId());
+            notifyAll();
+        }
     }
 
     public static void main(String[] args) {
         ConnectionPool pool = ConnectionPool.getInstance();
 
-        // Запустим 12 потоков, чтобы проверить блокировку
-        for (int i = 1; i <= 12; i++) {
+        for (int i = 1; i <= 11; i++) {
             final int taskId = i;
             new Thread(() -> {
+                Connection conn = null;
                 try {
-                    Connection conn = pool.getConnection();
+                    conn = pool.getConnection();
                     conn.execute("SELECT * FROM table_" + taskId);
                     Thread.sleep(2000);
-                    pool.releaseConnection(conn);
                 } catch (InterruptedException e) {
+                    Thread.currentThread().interrupt();
                     e.printStackTrace();
+                } finally {
+                    if (conn != null) {
+                        pool.releaseConnection(conn);
+                    }
                 }
             }).start();
         }
